# lentil

./: .gitignore  CMakeLists.txt  README.md  model.lnt  uninstall.sh
cmake/: FindGLFW.cmake  FindGSL.cmake
doc/: lntmodel.txt
res/shaders/: test.frag  test.vert
src/: debug.h  errors.c  errors.h  main.c
src/cmake/: Findlentil-core.cmake  Findlentil-rend.cmake  Findlentil-reso.cmake
src/core/: array.h  debug.c  errors.c  errors.h  sleep.h
src/lentil/: converter.c  core.h  flags.c  flags.h  game.c  game.h  main.c  math.h  rend.h  reso.h
src/lentil/core/: all.h  array.h  debug.h  errors.c  errors.h  sleep.c  sleep.h
src/lentil/math/: all.h  angles.c  angles.h  vec.c  vec.h  vectors.h
src/lentil/rend/: all.h  buffering.c  buffering.h  camera.c  camera.h  matrixgen.c  matrixgen.h  modelutils.c  modelutils.h
src/lentil/reso/: all.h  file.c  file.h  lntloader.c  lntloader.h  lntsaver.c  lntsaver.h  material.c  material.h  model.c  model.h  objloader.c  objloader.h  shader.c  shader.h  texture.c  texture.h
src/rend/: modelutils.c  modelutils.h  renderer.c  renderer.h
src/res/: model.h  shader.c  shader.h  texture.c  texture.h
src/reso/: file.c  file.h  lentloader.h  material.h  model.c  model.h  modelio.c  modelio.h  objloader.c  objloader.h  shader.c  shader.h  texture.c  texture.h
src/soup/: main.cpp  translation.cpp  translation.hpp
